# lipid

./: .gitignore  Cargo.toml  DOI.md  README.adoc  TEMP  TEMP copy  TEMP copy 2  TEMP copy.adoc  TEMP.adoc  TEST copy.adoc  TEST.adoc  file.arrow  file.parquet  ЕУЬЗ
benches/: compare copy.rs  compare.rs  expr.rs
doc/: ERRORS.adoc  FattyAcids.adoc  SFA.md  TEMP copy  UFA.md  byrdwell.com.adoc
doc/Inchi/: Layers.md
doc/doi/10.3390/ijms21165695/: README.md
doc/doi/Arun2016/: README.md
doc/doi/Chen2020/: README copy.adoc
doi/10.3390/ijms21165695/: list.en.adoc  list.ru.adoc  recommendations.ru.md
src/: bound.rs  display.rs  fatty_acid.rs  kind.rs  lib.rs  macro.rs  trait.rs
src/_triacylglycerol/: mod.rs
src/_triacylglycerol/thermodynamic/: mod.rs
src/chunked_array/: fatty_acid.rs  mod.rs  triacylglycerol.rs
src/const/: implicit.rs  mod.rs
src/const/explicit/: mod.rs  saturated.rs  unsaturated.rs
src/const/sized/: mod.rs  saturated.rs  unsaturated.rs
src/const/unsized/: mod.rs  omega.rs
src/display/: fatty_acid.rs  mod.rs  triacylglycerol.rs
src/expr/fatty_acid/: equal.rs  factor.rs  factors.rs  indices.rs  mass.rs  mod.rs  relative_atomic_mass.rs  select.rs
src/expr/triacylglycerol/: factors.rs  mass.rs  mod.rs  permutation copy.rs  permutation.rs  relative_atomic_mass.rs
src/fatty_acid/: const.rs  display.rs  ext.rs  mass.rs  mod.rs
src/fatty_acid/polars/: column.rs  data_frame.rs  mod.rs
src/fatty_acid/polars/expr/: chain_length.rs  const copy 2.rs  const copy.rs  const.rs  factor.rs  filter.rs  find.rs  mass.rs  mod.rs  short.rs
src/fatty_acid/polars/series/: mod.rs
src/polars/: bound.rs  column.rs  data_frame.rs  fatty_acid.rs  mod.rs  schema.rs  type.rs
src/polars/chunked_array/: bound.rs  fatty_acid.rs  fatty_acid_new.rs  formula.rs  mod.rs
src/polars/chunked_array/bound/: atomic.rs  chain_length.rs  kind.rs  mask.rs  mass.rs  mod.rs
src/polars/chunked_array/double_bound/: mod.rs
src/polars/chunked_array/fatty_acid/: atomic.rs  chain_length.rs  iter.rs  kind.rs  map.rs  mask copy.rs  mask.rs  mass.rs  mod.rs  select.rs
src/polars/chunked_array/fatty_acid_list/: map.rs  mask.rs  mod.rs  select.rs
src/polars/chunked_array/triple_bound/: mod.rs
src/polars/chunked_array/unsaturated/: mod.rs
src/polars/expr/: chain_length.rs  mass.rs  mod.rs
src/polars/expr/fatty_acid/: _indices.rs  atomic.rs  chain_length.rs  const.rs  equal.rs  factor.rs  find.rs  indices.rs  kind.rs  mask.rs  mass.rs  mod.rs  select.rs  short.rs
src/polars/expr/triacylglycerol/: chain_length.rs  mass.rs  mod.rs  permutation.rs
src/polars/function/: fatty_acid.rs
src/polars/series/: mod.rs
src/polars/series/bound/: display.rs  kind.rs  mass.rs  mod.rs
src/polars/series/fatty_acid/: mod.rs
src/triacylglycerol/: mod.rs
src/triacylglycerol/polars/expr/: chain_length.rs  mass.rs  mod.rs  stereospecific_number.rs
src/triacylglycerol/thermodynamic/: const.rs  mod.rs
tests/: contains.rs  display copy 2.rs  display copy.rs  display.rs  expr.rs  fatty_acid.rs  mod copy.rs  mod.rs  test.rs  test1.rs  test2.rs  test3.rs
tests/chunked_array/: bound.rs  fatty_acid.rs  mod.rs
tests/chunked_array/atomic/: carbon.rs  hydrogen.rs  mod.rs
tests/chunked_array/display/: common.rs  system.rs
tests/chunked_array/mass/: mod.rs  rco.rs  rcoo.rs  rcooch3.rs  rcooh.rs
tests/chunked_array/saturation/: cis.rs  delta12.rs  delta6.rs  delta9.rs  mod.rs  monounsaturated.rs  omega3.rs  omega6.rs  omega9.rs  polyunsaturated.rs  trans.rs
tests/display/: common.rs  mod.rs  system.rs
tests/expr/: chain_length.rs  ecn.rs  equal.rs  factors.rs  fatty_acid.rs  indices.rs  map.rs  mask.rs  mass.rs  mod copy.rs  mod.rs  new.rs  select.rs
tests/expr/fatty_acid/: bounds.rs  carbon.rs  carbons.rs  chain_length.rs  equal.rs  equivalent_carbon_number.rs  equivalent_chain_length.rs  fractional_chain_length.rs  hydrogen.rs  hydrogens.rs  indices.rs  is_cis.rs  is_delta12.rs  is_delta6.rs  is_delta9.rs  is_monounsaturated.rs  is_omega3.rs  is_omega6.rs  is_omega9.rs  is_polyunsaturated.rs  is_saturated.rs  is_trans.rs  is_unsaturated.rs  is_unsaturated12.rs  is_unsaturated6.rs  is_unsaturated9.rs  is_unsaturated_3.rs  is_unsaturated_6.rs  is_unsaturated_9.rs  map.rs  mask.rs  mass.rs  mod.rs  select.rs  unsaturation.rs
tests/expr/fatty_acid/factors/: factors.rs
tests/expr/fatty_acid/indices/: mod copy.rs  mod.rs
tests/expr/fatty_acid/mass/: mod.rs  rco.rs  rcoo.rs  (+2 more)
tests/expr/triacylglycerol/: chain_length.rs  equivalent_carbon_number.rs  indices.rs  mass.rs  mod.rs  permutation.rs
tests/triacylglycerol/: mod.rs
