[package]
name = "lipid"
version = "0.5.1"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
atom = { git = "https://github.com/ippras/atom" }
fatty_acid_macro = { git = "https://github.com/ippras/fatty_acid_macro" }
polars = { version = "0.51.0", default-features = false, features = [
    "abs",
    "cum_agg",
    "dtype-i128",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "fmt_no_tty",
    "is_in",
    "lazy",
    "list_any_all",
    "list_arithmetic",
    "list_eval",
    "log",
    "round_series",
    "serde-lazy",
    # "list_sets",
    # "dtype-categorical",
] }
polars_ext = { git = "https://github.com/kgv/polars_ext" }
serde = { version = "1.0.225", features = ["derive", "std"], optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
harness = false
name = "compare"
# name = "expr"

[features]
default = ["atomic", "ecl", "ecn", "indices", "map", "mass", "select"]

atomic = []
ecl = []
ecn = []
indices = []
map = []
mass = []
select = []
